src/core-crm/objects/Lead/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <description>Australian Business Number</description>
    <label>ABN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>