src/core-crm/objects/Lead/fields/Company_Category__c.field-meta.xml
<CustomField>
    <fullName>Company_Category__c</fullName>
    <label>Company Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Education Provider</fullName>
            </value>
            <value>
                <fullName>Government Body - Commonwealth</fullName>
            </value>
            <value>
                <fullName>Government Body - International</fullName>
            </value>
            <value>
                <fullName>Government Body - Local</fullName>
            </value>
            <value>
                <fullName>Government Body - State/Territory</fullName>
            </value>
            <value>
                <fullName>Not For Profit</fullName>
            </value>
            <value>
                <fullName>Professional Association</fullName>
            </value>
            <value>
                <fullName>Trust or Foundation</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Test Value 1</fullName>
                <isActive>false</isActive>
                <label>Test Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>