src/core-crm/objects/Lead/fields/Consent_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Consent_Source_Category__c</fullName>
    <description>Identifies where the marketing person&apos;s consent came from. This should reuse the business values from the Lead Source Category</description>
    <label>Consent Source Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Lead Ad</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
            <value>
                <fullName>Outreach Activity</fullName>
            </value>
            <value>
                <fullName>Referral Partner</fullName>
            </value>
            <value>
                <fullName>Strategic Partner</fullName>
            </value>
            <value>
                <fullName>Study Application</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner Sourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>