src/core-crm/objects/Lead/fields/Email_Opt_Out_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out_DateTime__c</fullName>
    <description>The date/time the marketing person opted out of receiving marketing comms via Email.</description>
    <label>Email Opt Out DateTime</label>
    <type>DateTime</type>
</CustomField>