src/core-crm/objects/Lead/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <description>Registered Entity for the Associated ABN</description>
    <label>Entity Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>