src/core-crm/objects/Lead/fields/Future_Student_Journey_Status__c.field-meta.xml
<CustomField>
    <fullName>Future_Student_Journey_Status__c</fullName>
    <label>Future Student Journey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Future_Student_Journey_Status</valueSetName>
    </valueSet>
</CustomField>