src/core-crm/objects/Lead/fields/hed__Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Birth_Date__c</fullName>
    <description>The Lead&apos;s birthdate.</description>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>