src/core-crm/objects/Lead/fields/hed__Language__c.field-meta.xml
<CustomField>
    <fullName>hed__Language__c</fullName>
    <description>The Lead&apos;s preferred language.</description>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>