src/core-crm/objects/Lead/fields/hed__Recruitment_Stage__c.field-meta.xml
<CustomField>
    <fullName>hed__Recruitment_Stage__c</fullName>
    <description>The Lead&apos;s stage in the recruitment process.</description>
    <inlineHelpText>The Lead&apos;s stage in the recruitment process.</inlineHelpText>
    <label>Recruitment Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Suspect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>