src/core-crm/objects/Lead/fields/hed__SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>hed__SMS_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, indicates the person doesn&apos;t want to receive SMS.</description>
    <label>SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>