src/core-crm/objects/Lead/fields/Lead_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Category__c</fullName>
    <description>Indicates the original lead source channel category for the Lead Source Channel that a Marketing Person interacted with/via.</description>
    <label>Lead Source Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Source_Category</valueSetName>
    </valueSet>
</CustomField>