src/core-crm/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <description>Identifies the type of lead, eg for an independent Learner or Corporate Learner</description>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCE Corporate Partner</fullName>
            </value>
            <value>
                <fullName>Learner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>