src/core-crm/objects/Lead/fields/LeadMobile_Locale__c.field-meta.xml
<CustomField>
    <fullName>LeadMobile_Locale__c</fullName>
    <label>LeadMobile Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loqate_Locale</valueSetName>
    </valueSet>
</CustomField>