src/core-crm/objects/Lead/fields/LeadMobile_Validation__c.field-meta.xml
<CustomField>
    <fullName>LeadMobile_Validation__c</fullName>
    <label>LeadMobile Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loqate_Validation</valueSetName>
    </valueSet>
</CustomField>