src/core-crm/objects/Lead/fields/Marketing_Interaction_Score__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Interaction_Score__c</fullName>
    <label>Marketing Interaction Score</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>