src/core-crm/objects/Lead/fields/Marketing_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Segmentation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Segmentation</label>
    <referenceTo>Marketing_Segmentation__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>