src/core-crm/objects/Lead/fields/Persona_Type__c.field-meta.xml
<CustomField>
    <fullName>Persona_Type__c</fullName>
    <description>This is the record type which will be used for the Primary Lead Record.</description>
    <label>Persona Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>