src/core-crm/objects/Lead/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <description>This is the primary way a contact would like to be communicated on.</description>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Work Email</fullName>
            </value>            
            <value>
                <fullName>Phone Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>