src/core-crm/objects/Lead/fields/Preferred_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Full_Name__c</fullName>
    <description>This field will be read-only on the layout and populated in the backend with these values: Salutation + Preferred Given Name + Last Name.</description>
    <externalId>true</externalId>
    <label>Preferred Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>