src/core-crm/objects/Lead/fields/SMS_Opt_In_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_In_DateTime__c</fullName>
    <description>The date/time the marketing person opted in to receive marketing comms via SMS.</description>
    <label>SMS Opt In DateTime</label>
    <type>DateTime</type>
</CustomField>