src/core-crm/objects/Lead/fields/SMS_Opt_Out_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_Out_DateTime__c</fullName>
    <description>The date/time the marketing person opted out of receiving marketing comms via SMS.</description>
    <label>SMS Opt Out DateTime</label>
    <type>DateTime</type>
</CustomField>