src/core-crm/objects/Lead/fields/Sync_to_MC__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is true, this record will be synchronised with Marketing Cloud</description>
    <label>Sync to MC</label>
    <type>Checkbox</type>
</CustomField>