src/core-crm/objects/Lead/fields/Work_Email__c.field-meta.xml
<CustomField>
    <fullName>Work_Email__c</fullName>
    <inlineHelpText>This field captures the work email of the contact.</inlineHelpText>
    <label>Work Email</label>
    <type>Email</type>
</CustomField>