src/core-crm/objects/Lead/fields/Work_Email_Opt_In_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Work_Email_Opt_In_DateTime__c</fullName>
    <description>The date and time that the email was opted in</description>
    <label>Work Email Opt In DateTime</label>
    <type>DateTime</type>
</CustomField>