src/core-crm/objects/Lead/fields/Work_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Work_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing should not email this email address</description>
    <label>Work Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>