src/core-crm/objects/Lead/validationRules/Email_must_be_unique.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_must_be_unique</fullName>
    <active>true</active>
    <description>Validates Email field if unique. Must not be the same with Work Email.</description>
    <errorConditionFormula>AND(
 NOT (ISBLANK(Email) ),
 IF(Email = Work_Email__c , true, false) 
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Email must be unique.</errorMessage>
</ValidationRule>