src/core-crm/objects/Lead/validationRules/Lead_Conversion_Qualified.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Conversion_Qualified</fullName>
    <active>true</active>
    <description>Validates if lead status is set to qualified but not yet converted.</description>
    <errorConditionFormula>AND(
 NOT(IsConverted),
 ISPICKVAL( Status , &apos;Qualified&apos;),
 ISPICKVAL(Lead_Type__c , &apos;CCE Corporate Partner&apos;)
)</errorConditionFormula>
    <errorMessage>You are unable to start at qualify stage. Please follow the lead conversion process.</errorMessage>
</ValidationRule>