src/core-crm/objects/Lead/validationRules/Lead_Source_Categ_Restrict_Edit_Existing.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_Categ_Restrict_Edit_Existing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $Profile.Name = &apos;Future Student Engagement&apos;,
 NOT(ISBLANK(TEXT(PRIORVALUE(Lead_Source_Category__c)))),
 ISCHANGED(Lead_Source_Category__c )
)</errorConditionFormula>
    <errorDisplayField>Lead_Source_Category__c</errorDisplayField>
    <errorMessage>Lead Source Category cannot be changed from it’s initial value.</errorMessage>
</ValidationRule>