src/core-crm/objects/Lead/validationRules/Required_Fields_on_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_on_Conversion</fullName>
    <active>true</active>
    <description>Fields required on conversion: First Name, Phone or Mobile, Company Category, Address</description>
    <errorConditionFormula>AND(
IsConverted = true,
ISPICKVAL(Lead_Type__c , &apos;CCE Corporate Partner&apos;),
OR(  
ISBLANK( FirstName ), 
ISPICKVAL(Company_Category__c , &apos;&apos;),
ISBLANK( Address ),
AND( ISBLANK( Phone ) , ISBLANK( MobilePhone ) ) 
)
)</errorConditionFormula>
    <errorMessage>Please ensure First Name, Phone or Mobile, Company Category, and Address is populated on the lead.</errorMessage>
</ValidationRule>