src/core-crm/objects/Lead/validationRules/Work_Email_must_be_unique.validationRule-meta.xml
<ValidationRule>
    <fullName>Work_Email_must_be_unique</fullName>
    <active>false</active>
    <description>Validates Work Email field if unique. Must not be the same with Email.</description>
    <errorConditionFormula>AND(
 NOT (ISBLANK(Email) ),
 IF(Work_Email__c = Email, true, false)
)</errorConditionFormula>
    <errorDisplayField>Work_Email__c</errorDisplayField>
    <errorMessage>Work Email must be unique.</errorMessage>
</ValidationRule>