src/core-crm/objects/Lead/listViews/QUTeX_CCE_Partner_Lead.listView-meta.xml
<ListView>
    <fullName>QUTeX_CCE_Partner_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>QUTeX CCE Partner</label>
    <queue>QUTeX_CCE_Partner</queue>
</ListView>